setup/salesforce/force-app/main/default/objects/Account/fields/Account_Owner_Employee_ID__c.field-meta.xml
<CustomField>
  <fullName>Account_Owner_Employee_ID__c</fullName>
  <description>HR system employee_id of the sales owner. Foreign key to hr_employees.employee_id for cross-system analytics joins.</description>
  <label>Account Owner Employee ID</label>
  <precision>18</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>