setup/salesforce/force-app/main/default/objects/Account/fields/Customer_Segment__c.field-meta.xml
<CustomField>
  <fullName>Customer_Segment__c</fullName>
  <description>Market segment targeted by the business model.</description>
  <label>Customer Segment</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Enterprise</fullName><default>false</default></value>
      <value><fullName>SME</fullName><default>false</default></value>
      <value><fullName>Developer Team</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>