setup/salesforce/force-app/main/default/objects/Account/fields/Engagement_Model__c.field-meta.xml
<CustomField>
  <fullName>Engagement_Model__c</fullName>
  <description>Lifecycle engagement model: SaaS/services mix across parent and subsidiary motions.</description>
  <label>Engagement Model</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>SaaS Only</fullName><default>false</default></value>
      <value><fullName>Services Only</fullName><default>false</default></value>
      <value><fullName>Hybrid</fullName><default>false</default></value>
      <value><fullName>SaaS-first Parent</fullName><default>false</default></value>
      <value><fullName>Services-first Parent</fullName><default>false</default></value>
      <value><fullName>Subsidiary - Services Expansion</fullName><default>false</default></value>
      <value><fullName>Subsidiary - SaaS Expansion</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>