setup/salesforce/force-app/main/default/objects/Account/fields/Parent_Relationship_Type__c.field-meta.xml
<CustomField>
  <fullName>Parent_Relationship_Type__c</fullName>
  <description>Role of this account in group hierarchy.</description>
  <label>Parent Relationship Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Standalone</fullName><default>false</default></value>
      <value><fullName>Parent</fullName><default>false</default></value>
      <value><fullName>Subsidiary</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>