setup/salesforce/force-app/main/default/objects/Account/fields/Primary_Offering__c.field-meta.xml
<CustomField>
  <fullName>Primary_Offering__c</fullName>
  <description>Main engagement type for this customer account.</description>
  <label>Primary Offering</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>SaaS</fullName><default>false</default></value>
      <value><fullName>Services</fullName><default>false</default></value>
      <value><fullName>Hybrid</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>