setup/salesforce/force-app/main/default/objects/Account/fields/Region__c.field-meta.xml
<CustomField>
  <fullName>Region__c</fullName>
  <description>Go-to-market region used for analytics segmentation.</description>
  <label>Region</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>APAC</fullName><default>false</default></value>
      <value><fullName>US</fullName><default>false</default></value>
      <value><fullName>EMEA</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>