setup/salesforce/force-app/main/default/objects/Account/fields/SaaS_Tier__c.field-meta.xml
<CustomField>
  <fullName>SaaS_Tier__c</fullName>
  <description>Current SaaS tier for this account.</description>
  <label>SaaS Tier</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>false</default></value>
      <value><fullName>Free</fullName><default>false</default></value>
      <value><fullName>Team</fullName><default>false</default></value>
      <value><fullName>Business</fullName><default>false</default></value>
      <value><fullName>Enterprise</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>