setup/salesforce/force-app/main/default/objects/Account/fields/Services_Line__c.field-meta.xml
<CustomField>
  <fullName>Services_Line__c</fullName>
  <description>Primary services line sold to this account.</description>
  <label>Services Line</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>false</default></value>
      <value><fullName>Data Strategy &amp; Consultancy</fullName><default>false</default></value>
      <value><fullName>End-to-End Data Platform</fullName><default>false</default></value>
      <value><fullName>Cloud Migration</fullName><default>false</default></value>
      <value><fullName>Managed Data Platform</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>